--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+.container {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #dashboard {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -49,9 +56,6 @@
     margin: 80px 20px 20px;
     border-radius: 15px;
     text-align: center;
-    align-self: flex-end;
-    align-items:end;
-    justify-content: end;
     width: 300px;
     height: 100px;
     font-size: 18px;
